# PaintFE

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  SECURITY.md  audit.toml  build.rs
.cargo/: audit.toml  config.toml
.github/: dependabot.yml
.github/workflows/: aur-publish.yml  ci.yml  release.yml  scorecard.yml  windows-portable.yml
_WEBSITE/: index.html
locales/: be.txt  de.txt  en.txt  es.txt  fe.txt  fr.txt  it.txt  ja.txt  nl.txt  pl.txt  pt.txt  ru.txt  tr.txt  zh-CN.txt  zh-TW.txt
packaging/: .gitignore
packaging/appimage/: build-appimage.sh
packaging/appimage/PaintFE.AppDir/: AppRun  PaintFE.desktop
packaging/aur/: PKGBUILD  PKGBUILD-bin
packaging/flatpak/: build-flatpak.sh  io.github.paintfe.PaintFE.desktop  io.github.paintfe.PaintFE.metainfo.xml  io.github.paintfe.PaintFE.yml
packaging/msix/: AppxManifest.xml  build-msix.ps1  gen-assets.ps1
paintdotnet-host/: Directory.Build.props  PaintFE.PaintDotNetHost.sln  README.md  publish.sh
paintdotnet-host/src/PaintDotNet.Base/: AssemblyMarker.cs  IndirectUI.cs  PaintDotNet.Base.csproj  Pair.cs  PropertySystem.cs
paintdotnet-host/src/PaintDotNet.Core/: CoreTypes.cs  PaintDotNet.Core.csproj
paintdotnet-host/src/PaintDotNet.Data/: AssemblyMarker.cs  PaintDotNet.Data.csproj
paintdotnet-host/src/PaintDotNet.Effects/: Effects.cs  PaintDotNet.Effects.csproj
paintdotnet-host/src/PaintFE.PaintDotNetHost/: PaintFE.PaintDotNetHost.csproj  Program.cs
paintdotnet-host/tests/LegacyFixture/: FixtureEffect.cs  LegacyFixture.csproj
plans/: experimental_features_note.md
src/: app.rs  assets.rs  canvas.rs  cli.rs  experimental.rs  i18n.rs  io.rs  ipc.rs  lib.rs  linux_key_probe.rs  logger.rs  main.rs  paintdotnet_plugins.rs  project.rs  signal_draw.rs  signal_widgets.rs  theme.rs  web_bridge.rs  web_fs.rs  windows_key_probe.rs
src/app/: bootstrap.rs  panels.rs  project_io.rs  runtime.rs  types.rs
src/app/ops/: dialogs.rs  helpers.rs
src/app/ops/dialogs/: adjustments.rs  blur.rs  brush_tip.rs  distort.rs  glitch_and_artistic.rs  noise.rs  paintdotnet_plugin.rs  render.rs  stylize.rs
src/app/runtime/update/: canvas_tail.rs  dialogs_menu.rs  input_shortcuts.rs  lifecycle_async.rs
src/canvas/: canvas_state.rs  layers.rs  tiled_image.rs  view_full.rs
src/canvas/view/: core.rs  overlay.rs
src/components/: colors.rs  dialogs.rs  history.rs  layers.rs  mod.rs  script_editor.rs  tools.rs
src/components/layers/: list.rs  operations.rs  settings.rs
src/config/: brushes.rs  icons.rs  keybindings.rs  settings.rs
src/gpu/: compositor.rs  compute.rs  context.rs  mod.rs  pool.rs  renderer.rs  shaders.rs  texture.rs
src/gpu/compute/: flood_fill.rs
src/ops/: adjustments.rs  ai.rs  canvas_ops.rs  clipboard.rs  color_removal.rs  dialogs.rs  effect_dialogs.rs  effects.rs  filters.rs  google_fonts.rs  inpaint.rs  mod.rs  print.rs  scripting.rs  shapes.rs  text.rs  text_layer.rs  transform.rs
src/ops/effects/: blur.rs  distort.rs  render.rs
src/ui/dialogs/: core.rs  effects.rs
src/ui/panels/: settings_window.rs
tests/: experimental_features.rs  gpu_pipelines.rs  inpaint.rs  io_roundtrip.rs  layer_ops.rs  scripting.rs  text_layer.rs  tool_strokes.rs  transform_ops.rs  visual_adjustments.rs  visual_blend.rs  visual_filters.rs  visual_shapes.rs  visual_transforms.rs
tests/common/: mod.rs
(+17 files in other folders)
