[package]
name = "PaintFE"
version = "1.3.8"
edition = "2024"

[lib]
name = "paintfe"
path = "src/lib.rs"

[[bin]]
name = "PaintFE"
path = "src/main.rs"

[dependencies]
eframe = "0.35.0"    # Wrapper for egui (the GUI framework)
egui = "0.35.0"      # The core GUI library
image = { version = "0.25", features = ["jpeg", "png", "webp", "bmp", "tga", "ico", "tiff"] }
tiff = "0.9"         # Direct dependency for TIFF compression options
rayon = "1.12"        # Parallel processing for faster compositing
uuid = { version = "1.0", features = ["v4", "js"] }  # Unique identifiers for projects
serde = { version = "1", features = ["derive"] }  # Serialization framework
serde_json = "1"
sha2 = "0.10"
bincode = "1"        # Binary serialization for .pfe files

gif = "0.13"             # Direct GIF encoder/decoder (multi-frame animation)
png = "0.17"             # Direct PNG encoder/decoder (APNG animation support)
color_quant = "1"        # Color quantization for GIF palette reduction

wgpu = "29"                                      # GPU acceleration (WebGPU API)
bytemuck = { version = "1", features = ["derive"] } # Safe casting for GPU buffers
pollster = "0.4"                                 # Block on async GPU init
ab_glyph = "0.2"                                 # Font loading + glyph rasterization
rhai = { version = "1.25.1", features = ["sync"] } # Embedded scripting engine (sandboxed)
base64 = "0.22.1"
kurbo = "0.13.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "shellapi", "dwmapi"] }
winit = "0.30"                                   # Event loop hook for suppressing Windows keyboard dings

[target.'cfg(target_os = "linux")'.dependencies]
x11-dl = "2.21"

# Native-only: no wasm32 equivalent (native file dialogs, system font
# enumeration, dynamic library loading, RAW demosaicing needing a C toolchain,
# CLI arg parsing, and the OS clipboard).
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.12"
webp = "0.3"
arboard = { version = "3", features = ["wayland-data-control"] }
font-kit = "0.14"
libloading = "0.8"
rawloader = "0.37"
imagepipe = "0.5"
clap = { version = "4", features = ["derive"] }
glob = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
wgpu = { version = "29", features = ["webgl"] }
web-time = "1.1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console", "Window", "Document", "Element", "HtmlElement", "Node", "HtmlAnchorElement",
    "HtmlInputElement", "FileList", "File", "Event", "EventTarget", "CssStyleDeclaration",
    "Blob", "BlobPropertyBag", "Url", "ClipboardEvent", "DataTransfer", "DataTransferItem",
    "DataTransferItemList", "Clipboard", "ClipboardItem", "Navigator", "Response", "Storage",
] }
js-sys = "0.3"
serde_json = "1"

[build-dependencies]
# Embeds the ICO file into the Windows EXE (window icon, taskbar icon, explorer icon)
winresource = "0.1"

[profile.release]
strip = true       # Strip debug symbols — smaller binary, fewer AV heuristic triggers
lto = true          # Link-time optimization — smaller + faster binary
codegen-units = 1   # Single codegen unit for maximum LTO effectiveness
